<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#000000"
        android:theme="@style/Theme.AppCompat.Light.Dialog"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrowtopic"
                android:layout_width="27dp"
                android:layout_height="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/arrow_back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="125dp"
                android:layout_height="36dp"
                android:padding="8dp"
                app:layout_constraintStart_toEndOf="@+id/back_arrowtopic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/ic_netflix_text_logo"
                android:contentDescription="@string/netflix_top" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Login Form Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <!-- Email or Phone Number Input -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email_or_phone_number"
            android:textColor="#ffff"
            android:textColorHint="#FFFEFE"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:padding="12dp"
            android:textColor="#ffff"
            android:layout_marginBottom="5dp"
            android:textColorHint="#FFFEFE"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:passwordToggleEnabled="true"/>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:textColor="#FFFEFE"
            android:textSize="19sp"
            android:text="@string/sign_in" />

        <!-- Link to Help -->
        <TextView
            android:id="@+id/textViewHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/need_help"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <!-- Sign up link -->
        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewHelp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/new_to_netflix_sign_up_now"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <!-- reCAPTCHA text -->
        <TextView
            android:id="@+id/textViewRecaptcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_is_protected_by_google_recaptcha_to_ensure_you_re_not_a_bot_learn_more"
            android:textColor="#757575"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>
