<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="#F1F3F6"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:theme="@style/Theme.AppCompat.Light.Dialog">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#59000000">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/ic_netflix_text_logo"
                    android:contentDescription="@string/netflixLogo" />

                <TextView
                    android:id="@+id/txt_TvShows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/back_arrow"
                    android:layout_marginStart="16dp"
                    android:text="@string/toolbar_tvshows"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/txt_TvShows"
                    android:layout_marginStart="16dp"
                    android:text="@string/toolbar_movies"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_MyList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/txt_Movies"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_my_list"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <include layout="@layout/content_home" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
